Swagger Configuration edited
